<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Use this to reference the development machine from emulator -->
    <string name="destination_host_default">10.0.2.2</string>

    <string name="app_name">Tushar Sonawane\'s Chat Client (Basic)</string>
    <integer name="app_port">6666</integer>
    <string name="latitude">40.744906</string>
    <string name="longitude">-74.023937</string>
    <string name="default_chatroom">_default</string>
    
    <!-- String literals in the UI -->
    <string name="destination_addr">Destination:</string>
    <string name="destination_hint">Port or SMS address</string>

    <string name="chat_name">Chat Name:</string>
    <string name="message_edit_text">Type your message here.</string>
    <string name="send_label">SEND</string>
</resources>