<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/destination_addr"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:labelFor="@id/destination_addr"/>

		<EditText
			android:id="@+id/destination_addr"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:inputType="text"
			android:singleLine="true"
			android:hint="@string/destination_hint"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/chat_name"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:labelFor="@id/chat_name" />

		<EditText
			android:id="@+id/chat_name"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:inputType="text"
			android:singleLine="true"
			android:importantForAccessibility="yes" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<EditText
			android:id="@+id/message_text"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.7"
			android:hint="@string/message_edit_text"
			android:inputType="text"
			android:singleLine="true"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:importantForAccessibility="yes" />

		<Button
			android:id="@+id/send_button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.3"
			android:text="@string/send_label"
			android:textAppearance="?android:attr/textAppearanceMedium" />

	</LinearLayout>

</LinearLayout>
